--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
     "scripts": {
         "serve": "vue-cli-service serve",
         "build": "vue-cli-service build",
-        "lint": "vue-cli-service lint"
+        "lint": "vue-cli-service lint",
+        "deploy": "gh-pages -d dist"
     },
-    "homepage": "https://",
+    "homepage": "https://buddhikadesilva.github.io/fishcount",
     "dependencies": {
         "eslint": "^5.16.0",
         "eslint-config-standard": "^12.0.0",
